[gd_scene load_steps=34 format=3 uid="uid://b3ksngrr6nf1f"]

[ext_resource type="Script" path="res://Scenes/Game/main_menu.gd" id="1_vqpgv"]
[ext_resource type="Texture2D" uid="uid://c67qpsqai1qwi" path="res://Resources/Textures/Main Menu/bg_1.png" id="2_8p8gt"]
[ext_resource type="Texture2D" uid="uid://c6qk5xmlxnma3" path="res://Resources/Textures/Main Menu/main_menu_particles.png" id="3_72efh"]
[ext_resource type="Texture2D" uid="uid://biubltlgdf44e" path="res://Resources/Textures/Main Menu/1_1.png" id="4_s5rd1"]
[ext_resource type="AudioStream" uid="uid://dsbmogobaeyng" path="res://Resources/Audio/SFX/UI/button_hover.wav" id="5_0du16"]
[ext_resource type="Texture2D" uid="uid://b7utkwho2ongh" path="res://Resources/Textures/Main Menu/1_2.png" id="5_oq3r4"]
[ext_resource type="AudioStream" uid="uid://5gj12883hk0" path="res://Resources/Audio/SFX/UI/button_press.wav" id="6_7j4va"]
[ext_resource type="Texture2D" uid="uid://bw8cj1ajmwgl8" path="res://Resources/Textures/Main Menu/1_3.png" id="6_qtnkq"]
[ext_resource type="Texture2D" uid="uid://dy0kotwvmht4g" path="res://Resources/Textures/Main Menu/2_1.png" id="7_2edy2"]
[ext_resource type="AudioStream" uid="uid://bcbul1x4fi8og" path="res://Resources/Audio/Music/main_menu.ogg" id="8_ugxx7"]
[ext_resource type="Texture2D" uid="uid://buj77s3mx12rl" path="res://Resources/Textures/Main Menu/2_3.png" id="9_owfla"]
[ext_resource type="Texture2D" uid="uid://bp4x4o3bihs7e" path="res://Resources/Textures/Main Menu/2_4.png" id="10_ijes1"]
[ext_resource type="Texture2D" uid="uid://btvpi187ulwsq" path="res://Resources/Textures/Main Menu/2_5.png" id="11_q4rna"]
[ext_resource type="Texture2D" uid="uid://bre287ynwdk1k" path="res://Resources/Textures/Main Menu/2_6.png" id="12_r1m6j"]
[ext_resource type="Texture2D" uid="uid://dgmbvm5kcm5kk" path="res://Resources/Textures/Main Menu/2_7.png" id="13_e7cfk"]
[ext_resource type="Texture2D" uid="uid://bru0geg71kcde" path="res://Resources/Textures/Main Menu/3_1.png" id="14_rikq5"]
[ext_resource type="Texture2D" uid="uid://brhn3lk5w8l3j" path="res://Resources/Textures/Main Menu/3_2.png" id="15_y6p5s"]
[ext_resource type="Texture2D" uid="uid://dsofj5wrlvfp5" path="res://Resources/Textures/Main Menu/3_3.png" id="16_c6631"]
[ext_resource type="FontFile" uid="uid://bsvbubhqv01qw" path="res://Resources/Fonts/hf-free-complete/futile-pro-v1/FutilePro.ttf" id="18_pwmmi"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_uf8ee"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k17yj"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(320, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 20.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 0.9
scale_max = 1.8
anim_offset_max = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_luwf6"]
atlas = ExtResource("5_oq3r4")
region = Rect2(0, 0, 100, 64)

[sub_resource type="Animation" id="Animation_7rtk5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 100, 64)]
}

[sub_resource type="Animation" id="Animation_hsgob"]
resource_name = "default"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 100, 64), Rect2(100, 0, 100, 64), Rect2(200, 0, 100, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bysed"]
_data = {
"RESET": SubResource("Animation_7rtk5"),
"default": SubResource("Animation_hsgob")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ums"]
atlas = ExtResource("9_owfla")
region = Rect2(0, 0, 45, 116)

[sub_resource type="Animation" id="Animation_jjlww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 45, 116)]
}

[sub_resource type="Animation" id="Animation_it4nc"]
resource_name = "default"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 45, 116), Rect2(45, 0, 45, 116), Rect2(90, 0, 45, 116), Rect2(135, 0, 45, 116)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4e41e"]
_data = {
"RESET": SubResource("Animation_jjlww"),
"default": SubResource("Animation_it4nc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6528l"]
atlas = ExtResource("12_r1m6j")
region = Rect2(0, 0, 64, 34)

[sub_resource type="Animation" id="Animation_48dx6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 34)]
}

[sub_resource type="Animation" id="Animation_d1bje"]
resource_name = "default"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 64, 34), Rect2(64, 0, 64, 34), Rect2(128, 0, 64, 34)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dyo7e"]
_data = {
"RESET": SubResource("Animation_48dx6"),
"default": SubResource("Animation_d1bje")
}

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vqpgv")

[node name="Background" type="Control" parent="."]
layout_mode = 2

[node name="BgColor" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 1, 0.756863, 1)

[node name="Background" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8p8gt")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Background"]
material = SubResource("CanvasItemMaterial_uf8ee")
position = Vector2(320, 360)
amount = 20
process_material = SubResource("ParticleProcessMaterial_k17yj")
texture = ExtResource("3_72efh")
lifetime = 10.0
preprocess = 10.0

[node name="11" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 67.0
offset_top = 23.0
offset_right = 115.0
offset_bottom = 71.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_s5rd1")

[node name="12" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 13.0
offset_top = 228.0
offset_right = 113.0
offset_bottom = 292.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_luwf6")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/12"]
libraries = {
"": SubResource("AnimationLibrary_bysed")
}
autoplay = "default"

[node name="13" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 457.0
offset_top = 160.0
offset_right = 505.0
offset_bottom = 208.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("6_qtnkq")
stretch_mode = 2

[node name="21" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 421.0
offset_top = 139.0
offset_right = 443.0
offset_bottom = 167.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("7_2edy2")
stretch_mode = 2

[node name="23" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 530.0
offset_top = 90.0
offset_right = 575.0
offset_bottom = 206.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_o7ums")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/23"]
libraries = {
"": SubResource("AnimationLibrary_4e41e")
}
autoplay = "default"
speed_scale = 3.0

[node name="24" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 443.0
offset_top = 52.0
offset_right = 459.0
offset_bottom = 68.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("10_ijes1")
stretch_mode = 2

[node name="25" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 152.0
offset_top = 191.0
offset_right = 168.0
offset_bottom = 207.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("11_q4rna")
stretch_mode = 2

[node name="26" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 238.0
offset_top = 288.0
offset_right = 286.0
offset_bottom = 320.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_6528l")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/26"]
libraries = {
"": SubResource("AnimationLibrary_dyo7e")
}
autoplay = "default"

[node name="27" type="TextureRect" parent="Background"]
layout_mode = 1
offset_left = 273.0
offset_right = 321.0
offset_bottom = 32.0
scale = Vector2(2, 2)
texture = ExtResource("13_e7cfk")
stretch_mode = 2

[node name="31" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 69.0
offset_top = 151.0
offset_right = 85.0
offset_bottom = 167.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("14_rikq5")
stretch_mode = 2

[node name="32" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 496.0
offset_top = 318.0
offset_right = 512.0
offset_bottom = 334.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("15_y6p5s")
stretch_mode = 2

[node name="33" type="TextureRect" parent="Background"]
layout_mode = 2
offset_left = 450.0
offset_top = 288.0
offset_right = 466.0
offset_bottom = 304.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("16_c6631")
stretch_mode = 2

[node name="Menu" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Main" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("18_pwmmi")
text = "Project Gallery"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menu/MarginContainer/Main"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/Main"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 15

[node name="Play" type="Button" parent="Menu/MarginContainer/Main/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="Menu/MarginContainer/Main/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Controls" type="Button" parent="Menu/MarginContainer/Main/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="Quit" type="Button" parent="Menu/MarginContainer/Main/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" type="VBoxContainer" parent="Menu/MarginContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("18_pwmmi")
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menu/MarginContainer/Settings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/Settings"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label2" type="Label" parent="Menu/MarginContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 1

[node name="Fullscreen" type="CheckBox" parent="Menu/MarginContainer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Menu/MarginContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="Menu/MarginContainer/Settings/VBoxContainer"]
layout_mode = 2
min_value = -72.0
max_value = 6.0

[node name="Done" type="Button" parent="Menu/MarginContainer/Settings"]
layout_mode = 2
size_flags_vertical = 8
text = "Done"

[node name="Controls" type="VBoxContainer" parent="Menu/MarginContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/Controls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("18_pwmmi")
text = "Controls"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Menu/MarginContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 4
text = "click a keybind to change it, press Delete to remove it."

[node name="HSeparator" type="HSeparator" parent="Menu/MarginContainer/Controls"]
layout_mode = 2

[node name="KeybindsContainer" type="VBoxContainer" parent="Menu/MarginContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/Controls"]
layout_mode = 2

[node name="Reset" type="Button" parent="Menu/MarginContainer/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="Done" type="Button" parent="Menu/MarginContainer/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Done"

[node name="Hovered" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0du16")

[node name="Pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7j4va")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ugxx7")
autoplay = true

[connection signal="mouse_entered" from="Menu/MarginContainer/Main/VBoxContainer/Play" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Menu/MarginContainer/Main/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/Main/VBoxContainer/Settings" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Menu/MarginContainer/Main/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/Main/VBoxContainer/Controls" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Menu/MarginContainer/Main/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/Main/VBoxContainer/Quit" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Menu/MarginContainer/Main/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Menu/MarginContainer/Settings/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="Menu/MarginContainer/Settings/VBoxContainer/Volume" to="." method="_on_volume_changed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/Settings/Done" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Menu/MarginContainer/Settings/Done" to="." method="_on_settings_done_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/Controls/HBoxContainer/Reset" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Menu/MarginContainer/Controls/HBoxContainer/Reset" to="." method="_on_controls_reset_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/Controls/HBoxContainer/Done" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Menu/MarginContainer/Controls/HBoxContainer/Done" to="." method="_on_controls_done_pressed"]
